# Mac-Set-Default-Apps

./: .cirrus.yml  .editorconfig  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlintrc  .prettierrc.json  CHANGELOG.md  CNAME  LICENSE  README.md  build.sh  cspell.json  eslint.config.mjs  jest.config.ts  mac_set_default_apps.py  msda.code-workspace  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.mjs  run_tests_locally.sh  tests.py  tsconfig.json  webpack.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  help-request.yml
.github/workflows/: build_and_release.yml  test.yml  test_and_build.yml  test_build_and_release.yml
archive/payload/: msda  msda.py
archive/tests/: fake_filesystem_tests.py  functional_tests.py  tests.py
config/apps/: com.adobe.acrobat.pro.yml  com.google.Chrome.yml  com.microsoft.edgemac.yml  com.microsoft.outlook.yml
config/roles/: browser.yml  calendar.yml  pdf.yml  (+1 more)
dicts/: MDMs.txt  URLSchemes.txt  extensions.txt  macOS.txt
jest/: fs.ext.ts
msda/: errors.py  main.py  models.py
payload/: msda  msda.py
requirements/: ci.txt  local.txt  test.txt
src/: argparse.ts  config.json  configSchema.json  global.d.ts  globals.ts  index.ts  msda.sh  schemas.ts  serializers.ts  types.ts  utils.ts
staging/: build.pkr.hcl
tests/: factories.py  fake_filesystem_tests.py  functional_tests.bats  functional_tests.py  managers.test.ts  models.test.ts  test_functional.py  test_settings.py  test_unit.py  test_utils.py  tests.py  unit_tests.bats  utils.py  utils.sh  utils.test.ts
(+93 files in other folders)
