[tool.poetry]
name = "mac-set-default-apps"
version = "2.0.0"
description = "MSDA provides an easy way to silently change the default applications used by macOS. There are no pop-ups or prompts and, even better, it works for Google Chrome!"
authors = ["David G Rosenberg <targendaz2@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/targendaz2/Mac-Set-Default-Apps"
packages = [{include = "msda"}]

[tool.poetry.scripts]
msda = "msda.main:app"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
typer = "^0.7.0"
pyobjc = "^9.1.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
pytest-custom-exit-code = "^0.3.0"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
